tests/fixtures/valid/for_loop/str_dict_keys_iteration.py
# Iteration over dict.keys() with string keys
d: dict[str, int] = {"a": 1, "b": 2, "c": 3}
for k in d.keys():
    print(k)
